--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -1,2 +1,24 @@
 server:
   port: 3344
+
+spring:
+  application:
+    name: cloud-config-center #注册进Eureka服务器的微服务名
+
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/heyangang/cloud2020-1 #GitHub上面的git仓库名字
+          ####搜索目录
+          search-paths: cloud2020-1
+          ####读取分支
+          default-label: master
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      #向eureka进群注册服务
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
