--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -8,5 +8,6 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      #defaultZone: http://eureka7001.com:7001/eureka/
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/     #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
+      #集群指向其它eureka
+      defaultZone: http://eureka7001.com:7001/eureka/
+      #defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/     #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
